--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.64.2",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
