--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.64.2",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
     "recharts": "^2.15.0",
